--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,user-scalable=no">
         <title>Lisk Hub</title>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="http://localhost:8080/hub/../styles.css">
         <link rel="icon" type="image/png" href="./assets/images/LISK.png" />
+        <base href="http://localhost:8080/hub/" >
     </head>
     <body>
         <div id="app"></div>
-        <script src="./bundle.vendor.js"></script>
-        <script src="./bundle.app.js"></script>
+        <script src="http://localhost:8080/hub/../bundle.vendor.js"></script>
+        <script src="http://localhost:8080/hub/../bundle.app.js"></script>
     </body>
     </body>
 </html>
